# gzweb

./: .gitignore  .jshintrc  CHANGELOG.md  CMakeLists.txt  Gruntfile.js  deploy.sh  get_local_models.py  package-lock.json  package.json  webify_models.py  webify_models_v2.py
.github/workflows/: ci.yaml
gz3d/src/: gzscene.js
gzbridge/: CMakeLists.txt  binding.gyp
src/: server.js
